# kube-mdns

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  index.yaml
.github/workflows/: chart.yaml  docker-push.yaml  goreleaser.yaml
charts/kube-mdns/: Chart.yaml  values.schema.json  values.yaml
charts/kube-mdns/templates/: _helpers.tpl  cluster-role-binding.yaml  cluster-role.yaml  daemonset.yaml  network-policy.yaml  service-account.yaml
docker/: Dockerfile  Dockerfile.goreleaser
src/: bus.rs  httpd.rs  main.rs
