[package]
name = "kube-mdns"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.1"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
thiserror = "2.0"
tracing = "0.1.41"

[dependencies.axum]
version = "0.8.1"
default-features = false
features = [
    "http1",
    "tokio",
    "tracing",
]

[dependencies.k8s-openapi]
version = "0.25.0"
features = [
    "v1_32",
]

[dependencies.kube]
version = "1.1.0"
features = [
    "runtime",
]

[dependencies.tokio]
version = "1.46.1"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = [
    "env-filter",
]

[dependencies.zbus]
version = "5.8.0"
features = [
    "tokio",
]
