[package]
name = "kube-mdns"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.1"
version = "0.1.1"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
thiserror = "2.0"
tracing = "0.1.41"

[dependencies.axum]
version = "0.8.4"
default-features = false
features = [
    "http1",
    "tokio",
    "tracing",
]

[dependencies.k8s-openapi]
version = "0.26.0"
features = [
    "v1_33",
]

[dependencies.kube]
version = "2.0.1"
features = [
    "runtime",
]

[dependencies.tokio]
version = "1.47.1"
features = [
    "macros",
    "rt-multi-thread",
]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = [
    "env-filter",
]

[dependencies.zbus]
version = "5.11.0"
features = [
    "tokio",
]
